backend.log
nohup: ignoring input
Trying to connect to host: localhost
Connected to host: localhost
Connected with address: 0xB60f74C1EFe4fA3BD9838b4CEd6177843D67FbA4
 * Serving Flask app 'backend'
 * Debug mode: on
[31m[1mWARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.[0m
 * Running on all addresses (0.0.0.0)
 * Running on http://127.0.0.1:5100
 * Running on http://192.168.1.132:5100
[33mPress CTRL+C to quit[0m
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-114-750
127.0.0.1 - - [14/Mar/2025 14:11:39] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:11:44] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:11:49] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:11:53] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:11:58] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:03] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:07] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:12] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:16] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:21] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:26] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:31] "POST /add-medical HTTP/1.1" 200 -
127.0.0.1 - - [14/Mar/2025 14:12:35] "POST /add-medical HTTP/1.1" 200 -
198.137.18.28 - - [14/Mar/2025 14:36:47] "POST /add-device HTTP/1.1" 200 -
45.142.193.246 - - [17/Mar/2025 03:18:58] code 400, message Bad HTTP/0.9 request type ('\x03\x00\x00/*à\x00\x00\x00\x00\x00Cookie:')
45.142.193.246 - - [17/Mar/2025 03:18:58] "[31m[1m\x03\x00\x00/*à\x00\x00\x00\x00\x00Cookie: mstshash=Administr[0m" 400 -
194.180.48.85 - - [18/Mar/2025 09:54:56] code 400, message Bad request syntax ('\x03\x00\x00\x13\x0eà\x00\x00\x00\x00\x00\x01\x00\x08\x00\x03\x00\x00\x00')
194.180.48.85 - - [18/Mar/2025 09:54:56] "[31m[1m\x03\x00\x00\x13\x0eà\x00\x00\x00\x00\x00\x01\x00\x08\x00\x03\x00\x00\x00[0m" 400 -
 * Detected change in '/home/sunlab/web3db_reloaded/backend.py', reloading
Trying to connect to host: localhost
Connected to host: localhost
Connected with address: 0xB60f74C1EFe4fA3BD9838b4CEd6177843D67FbA4
Topic: heart_rate
Payload: {"timestamp": 1741975900.003577, "value": 72.94}
Parsed Payload:
{
  "timestamp": 1741975900.003577,
  "value": 72.94
}
Sending message to RabbitMQ...
Successfully connected to RabbitMQ node: localhost
Successfully connected to RabbitMQ node: localhost
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975900.003577, 'value': 72.94}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975904.8981912, "value": 78.36}
Parsed Payload:
{
  "timestamp": 1741975904.8981912,
  "value": 78.36
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975904.8981912, 'value': 78.36}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975909.4978087, "value": 73.98}
Parsed Payload:
{
  "timestamp": 1741975909.4978087,
  "value": 73.98
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975909.4978087, 'value': 73.98}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975914.073845, "value": 79.63}
Parsed Payload:
{
  "timestamp": 1741975914.073845,
  "value": 79.63
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975914.073845, 'value': 79.63}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975918.7074726, "value": 71.52}
Parsed Payload:
{
  "timestamp": 1741975918.7074726,
  "value": 71.52
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975918.7074726, 'value': 71.52}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975923.3046687, "value": 70.27}
Parsed Payload:
{
  "timestamp": 1741975923.3046687,
  "value": 70.27
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975923.3046687, 'value': 70.27}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975927.9603055, "value": 70.69}
Parsed Payload:
{
  "timestamp": 1741975927.9603055,
  "value": 70.69
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975927.9603055, 'value': 70.69}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975932.6060507, "value": 73.19}
Parsed Payload:
{
  "timestamp": 1741975932.6060507,
  "value": 73.19
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975932.6060507, 'value': 73.19}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975937.2854803, "value": 78.47}
Parsed Payload:
{
  "timestamp": 1741975937.2854803,
  "value": 78.47
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975937.2854803, 'value': 78.47}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975941.965702, "value": 79.55}
Parsed Payload:
{
  "timestamp": 1741975941.965702,
  "value": 79.55
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975941.965702, 'value': 79.55}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975946.6850843, "value": 74.67}
Parsed Payload:
{
  "timestamp": 1741975946.6850843,
  "value": 74.67
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975946.6850843, 'value': 74.67}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975951.51271, "value": 72.65}
Parsed Payload:
{
  "timestamp": 1741975951.51271,
  "value": 72.65
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975951.51271, 'value': 72.65}}
Message sent successfully!
Topic: heart_rate
Payload: {"timestamp": 1741975956.2400174, "value": 72.02}
Parsed Payload:
{
  "timestamp": 1741975956.2400174,
  "value": 72.02
}
Sending message to RabbitMQ...
 [x] Sent to RabbitMQ: {'topic': 'heart_rate', 'payload': {'timestamp': 1741975956.2400174, 'value': 72.02}}
Message sent successfully!
Wallet ID: 456789
Device IDs: ['topic/456789']
Categories: ['1']
Measurement Units: ['bpm']
Names: ['xyz']
 * Restarting with stat
 * Debugger is active!
 * Debugger PIN: 114-114-750
 * Detected change in '/home/sunlab/web3db_reloaded/backend.py', reloading
Trying to connect to host: localhost
Connected to host: localhost
Connected with address: 0xB60f74C1EFe4fA3BD9838b4CEd6177843D67FbA4
 * Restarting with stat
  File "/home/sunlab/web3db_reloaded/backend.py", line 256
    @
     ^
SyntaxError: invalid syntax
